TCA-738 fix test items table headers background color for alternative contrasts

--- a/views/scss/qti/_table.scss
+++ b/views/scss/qti/_table.scss
@@ -23,7 +23,7 @@ table {
         }
 
         th {
-            background-color: $uiHeaderBg;
+            background-color: rgba($uiHeaderBg, 0.7);
             font-weight: bold;
         }
 
